# Simplemoji

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  build.rs  bundle.nix  cliff.toml  default.nix  dist-workspace.toml  flake.nix  release.toml  rust-toolchain.toml  strategies.nix  style.css
.github/: dependabot.yml
.github/workflows/: aur.yml  build-setup.yml  build.yml  ci.yml  release.yml
crates/ui/: Cargo.toml  build.rs
crates/ui/src/: lib.rs
nix/: default.nix  hm-module.nix  nixos-module.nix  overlay.nix  skia-externals.json
src/: app.rs  app_data.rs  color.rs  ids.rs  main.rs  model.rs  navigation.rs  recents.rs  settings.rs  skin_tone.rs  update.rs  utils.rs  view.rs
src/components/: emoji.rs  hoverable.rs  mod.rs  tone_selector.rs
src/layouts/: emojis_view.rs  mod.rs  preview.rs  search.rs
src/navigation/: ext.rs
src/styles/: btn_style.rs  mod.rs  search_style.rs  select.rs
ui/: globals.slint  main.slint  navigation.slint
ui/api/: tabs.slint
ui/components/: combobox.slint  emoji-row.slint  emoji.slint  input.slint  keydebug.slint  preview.slint  search.slint  tab.slint
wix/: main.wxs
