[package]
version = "0.2.1"
name = "simplemoji"
description = "Fast Application for look your amazing emojis write in Rust"
homepage = "https://github.com/SergioRibera/Simplemoji"
repository = "https://github.com/SergioRibera/Simplemoji"
authors = ["Sergio Ribera <contact@sergioribera.rs>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
strip = true
lto = "thin"
panic = 'abort'
opt-level = 3
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
log = "0.4.21"
env_logger = "0.11"
emojis = "0.6"
dark-light = "1"
display-info = "0.5"
device_query = "3"
iced_tiny_skia = "0.12"
iced = { version = "0.12", default-features = false, features = ["advanced"] }
iced_aw = { version = "0.9", default-features = false, features = ["grid"] }
clap = { version = "4", features = [
    "derive",
    "color",
    "env",
    "suggestions",
    "wrap_help",
] }
arboard = { version = "3", features = ["wayland-data-control"] }

[package.metadata.aur]
depends = ["noto-fonts-emoji", "noto-fonts"]
source_download = "{{ repository }}/releases/download/v{{ version }}/{{ name }}-{{ arch }}-unknown-linux-gnu.tar.xz"
