[package]
version = "1.2.0"
name = "simplemoji"
description = "Fast Application for look your amazing emojis write in Rust"
homepage = "https://github.com/SergioRibera/Simplemoji"
repository = "https://github.com/SergioRibera/Simplemoji"
authors = ["Sergio Ribera <contact@sergioribera.rs>"]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace]
members = ["crates/ui"]

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
strip = true
lto = "thin"
panic = 'abort'
opt-level = 3
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
clap = { version = "4", features = [
    "derive",
    "color",
    "env",
    "suggestions",
    "wrap_help",
] }
slint = { version = "1.14", default-features = false, features = [
    "compat-1-2",
    "backend-winit",
    "renderer-winit-skia",
    "unstable-winit-030",
] }

[dependencies]
log = "0.4"
env_logger = "0.11"
display-info = "0.5"
device_query = "4"
clap.workspace = true
slint.workspace = true
arboard = { version = "3", features = ["wayland-data-control"] }
i-slint-core = { version = "1.14", default-features = false }
fuzzy-matcher = "0.3"
ui = { path = "./crates/ui" }
bincode = "2"

[package.metadata.aur]
depends = ["noto-fonts-emoji", "noto-fonts"]
source_download = "{{ repository }}/releases/download/v{{ version }}/{{ name }}-{{ arch }}-unknown-linux-gnu.tar.xz"

[package.metadata.wix]
upgrade-guid = "7506E356-10FC-408C-AD87-61C24FC7D539"
path-guid = "CD49C02F-DD1A-4D75-821C-0AF3DD77DC28"
license = false
eula = false
